fixed too long page in chrome, made sidebar responsive >= 992px

--- a/style.css
+++ b/style.css
@@ -15,20 +15,20 @@ Home Page only (FullScreen Layout)
 /* -- Basic Layout: http://stackoverflow.com/a/4676510 */
 .fullscreen-wrapper {
   width: 100%;
-  height: 100%;
+  height: 98%;
   position: fixed;
   z-index: 2;
   color: #fff;
 }
 .fullscreen-wrapper .home-content {
   position: relative;
-  margin-right: 350px;
+  margin-right: 25%;
   min-height: 100%;
 }
 .fullscreen-wrapper aside {
   background-color: rgba(39, 83, 143, 0.5);
   min-height: 100%;
-  width: 350px;
+  width: 25%;
   position: absolute;
   top: 0;
   right: 0;
